--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,5 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_add_executable(pattern_pose_node src/pattern_pose_node.cpp)
+rosbuild_add_executable(checkerboard_detector_node src/checkerboard_detector_node.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
