--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 rosbuild_add_executable(checkerboard_detector_node src/checkerboard_detector_node.cpp)
+rosbuild_add_executable(marker_detector_node src/marker_detector_node.cpp)
+
+target_link_libraries(marker_detector_node ARgsub AR ARMulti ARvideo)
+
 #target_link_libraries(example ${PROJECT_NAME})
