first version of multiple marker detecting node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 rosbuild_gensrv()
 
+rosbuild_add_library(marker_detection src/marker_detector.cpp)
+target_link_libraries(marker_detection AR)
+
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
@@ -29,6 +32,6 @@ rosbuild_gensrv()
 rosbuild_add_executable(checkerboard_detector_node src/checkerboard_detector_node.cpp)
 rosbuild_add_executable(marker_detector_node src/marker_detector_node.cpp)
 
-target_link_libraries(marker_detector_node ARgsub AR ARMulti ARvideo)
+target_link_libraries(marker_detector_node marker_detection)
 
 #target_link_libraries(example ${PROJECT_NAME})
