some more separation of parameter loading to facilitate new marker detector server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ rosbuild_gensrv()
 
 rosbuild_add_library(marker_detection src/marker_detector.cpp 
                                       src/marker_detector_node.cpp
+                                      src/marker_detector_server.cpp
                                       src/marker_detector_nodelet.cpp)
 target_link_libraries(marker_detection AR)
 
@@ -33,7 +34,9 @@ target_link_libraries(marker_detection AR)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 rosbuild_add_executable(checkerboard_detector_node src/checkerboard_detector_node.cpp)
 rosbuild_add_executable(marker_detector_node src/marker_detector_node_main.cpp)
+rosbuild_add_executable(marker_detector_server src/marker_detector_server_main.cpp)
 
 target_link_libraries(marker_detector_node marker_detection)
+target_link_libraries(marker_detector_server marker_detection)
 
 #target_link_libraries(example ${PROJECT_NAME})
