--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>camera_calibration_parsers</build_depend>
@@ -23,12 +24,13 @@
   <build_depend>libartoolkit</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>nodelet</build_depend>
+  <build_depend>nodelet</build_depend>  
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>camera_calibration_parsers</run_depend>
